@@ -1,3 +1,6 @@
+HEAD
+	+ Display unknown hostnames as 'Unknown' in leases widget instead
+	  of an empty string.
 4.2
 	+ Clarify error message in fixed addresses table
 4.1.1
